--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "color-alpha": "^1.1.3",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
@@ -26,12 +30,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "react-navigation-drawer": "^2.7.1",
-    "react-navigation-header-buttons": "^6.3.1",
-    "react-navigation-material-bottom-tabs": "^2.3.4",
-    "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.1"
+    "react-navigation-header-buttons": "^6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
