--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.11.1",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "2.3.0-alpha.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation-header-buttons": "^6.3.1"
   },
